Added image and New HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activity 1: Student Bio</title>
 </head>
 <body>
-    
+    <h1>Student Bio</h1>
+    <h2>Xavier Guzman</h2>
+    <img width="200" src="C:\Users\guzma\Desktop\New-Code\assets\AnytimeFitness.jpg">
+    <p>
+        I am currently working for Planet Fitness as an MSR. One of my passions is strength and coditioning which I do on the side to help others achieve their goals and better their lifestyles. I also enjoy hands on activities such as model kits, pc building, and just recently coding. I have a Border Collie named Finnick who is off the walls full of energy. My biggest milestone is coming up where I will be getting married to my high school sweet heart next year on June 13th. I am looking forward to this new chapter in my life, it is exciting and a bit terrifying. 
+    </p>
+    <h2>Contact Info</h2>
+    <ul>
+        <li>Email: guzmanx112@gmail.com</li>
+        <li>Github: New-Code</li>
+        <li>Portfolio: coming soon</li>
+    </ul>
 </body>
 </html>
