--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
+    <!-- Headers -->
     <h1>Student Bio</h1>
     <h2>Xavier Guzman</h2>
+
+    <!-- Image -->
     <img width="200" src="C:\Users\guzma\Desktop\New-Code\assets\AnytimeFitness.jpg">
     <p>
         I am currently working for Planet Fitness as an MSR. One of my passions is strength and coditioning which I do
@@ -20,9 +23,11 @@
         terrifying.
     </p>
     <h2>Contact Info</h2>
+
+    <!-- Links -->
     <ul>
-        <li>Email: guzmanx112@gmail.com</li>
-        <li>Github: New-Code</li>
+        <li>Email: <a href="mailto:guzmanxavi112@gmail.com">guzmanxavi112@gmail</a></li>
+        <li>Github: <a href="https://github.com/XavierG13">XavierG13</a></li>
         <li>Portfolio: coming soon</li>
     </ul>
 </body>
