Added Coming Soon link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul>
         <li>Email: <a href="mailto:guzmanxavi112@gmail.com">guzmanxavi112@gmail</a></li>
         <li>Github: <a href="https://github.com/XavierG13">XavierG13</a></li>
-        <li>Portfolio: coming soon</li>
+        <li>Portfolio: <a href="ComingSoon">Coming Soon</a></li>
     </ul>
 </body>
 
