--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity 1: Student Bio</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-    <!-- Headers -->
+   <header>
     <h1>Student Bio</h1>
-    <h2>Xavier Guzman</h2>
+   </header>
+
+   <div class="container">
+
+       <section id="main-bio">
+           <h2>Xavier Guzman</h2>
 
     <!-- Image -->
-    <img width="200" src="C:\Users\guzma\Desktop\New-Code\assets\AnytimeFitness.jpg">
+    <img id="bio-img" width="200" src="C:\Users\guzma\Desktop\New-Code\assets\AnytimeFitness.jpg">
     <p>
         I am currently working for Planet Fitness as an MSR. One of my passions is strength and coditioning which I do
         on the side to help others achieve their goals and better their lifestyles. I also enjoy hands on activities
@@ -22,7 +28,10 @@
         heart next year on June 13th. I am looking forward to this new chapter in my life, it is exciting and a bit
         terrifying.
     </p>
-    <h2>Contact Info</h2>
+       </section>
+       
+       <section id="contact-info">
+           <h2>Contact Info</h2>
 
     <!-- Links -->
     <ul>
@@ -30,6 +39,9 @@
         <li>Github: <a href="https://github.com/XavierG13">XavierG13</a></li>
         <li>Portfolio: <a href="ComingSoon">Coming Soon</a></li>
     </ul>
+
+       </section>
+   </div>
 </body>
 
 </html>
